ingress/mcx/ingress_mcx-cab.yaml
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-proxy-service
    namespace: prod
    annotations:
      nginx.ingress.kubernetes.io/default-backend: session-proxy
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/proxy-body-size: 5000m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/x-forwarded-prefix: "/"
  spec:
    rules:
    - host: cab.dev-mcx.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: session-proxy
              port:
                number: 80
